CHANGES: ddt

31 (2013/10/27):
	- Added `-W` option to print paths.
	- Now strips trailing slash from DDT_PREFIX to ensure consistency.

30 (2013/10/27):
	- Almost completely re-written and released publically.

## (2012/##/##):
	- Original versions, not really better than `roundup`.

