@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "DDT" "1" "October 2013" "" ""
+.TH "DDT" "1" "November 2013" "" ""
 .
 .SH "NAME"
 \fBddt\fR \- unit\-testing tool for shell scripts
